# foris-controller-diagnostics-module

./: .gitlab-ci.yml  CHANGELOG.md  CHANGELOG.rst  README.rst  pyproject.toml  setup.py
foris_controller_backends/diagnostics/: __init__.py
foris_controller_modules/diagnostics/: __init__.py
foris_controller_modules/diagnostics/handlers/: __init__.py  mock.py  openwrt.py
foris_controller_modules/diagnostics/schema/: diagnostics.json
tests/: conftest.py  fixtures.py  test_diagnostics.py
tests/test_root/usr/share/diagnostics/modules/: 75_notification.module
tests/ubus-acl/: diagnostics.json
tests/uci_configs/: foris
